--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.14",
+    "@google-cloud/text-to-speech": "^5.8.0",
+    "@google/generative-ai": "^0.21.0",
     "@neondatabase/serverless": "^0.10.4",
+    "@radix-ui/react-alert-dialog": "^1.1.5",
+    "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.4",
@@ -22,8 +28,10 @@
     "next": "^15.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "say": "^0.16.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
