--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.14",
+    "@fal-ai/client": "^1.2.3",
+    "@fal-ai/serverless-client": "^0.15.0",
     "@google-cloud/text-to-speech": "^5.8.0",
     "@google/generative-ai": "^0.21.0",
     "@neondatabase/serverless": "^0.10.4",
@@ -27,8 +29,10 @@
     "drizzle-orm": "^0.38.4",
     "lucide-react": "^0.473.0",
     "next": "^15.1.5",
+    "openai": "^4.80.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "replicate": "^1.0.1",
     "say": "^0.16.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
