--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@google/generative-ai": "^0.21.0",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-alert-dialog": "^1.1.5",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@remotion/cli": "4.0.258",
     "assemblyai": "^4.8.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -27,11 +29,13 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.4",
+    "framer-motion": "^12.0.11",
     "lucide-react": "^0.473.0",
     "next": "^15.1.5",
     "openai": "^4.80.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "remotion": "4.0.258",
     "replicate": "^1.0.1",
     "say": "^0.16.0",
     "tailwind-merge": "^2.6.0",
