--- a/package.json
+++ b/package.json
@@ -56,5 +56,9 @@
     "eslint-config-next": "15.1.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
-  }
+  },
+  "engines": {
+  "node": "20.x"
+}
+
 }
