--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "@remotion/bundler": "^4.0.260",
     "@remotion/cli": "^4.0.260",
     "@remotion/compositor-win32-x64-msvc": "^4.0.260",
+    "@remotion/lambda": "^4.0.265",
     "@remotion/player": "^4.0.260",
-    "@remotion/renderer": "^4.0.260",
+    "@remotion/renderer": "^4.0.265",
     "@remotion/streaming": "^4.0.260",
     "@remotion/studio": "^4.0.260",
     "assemblyai": "^4.8.0",
@@ -36,6 +37,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.4",
+    "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^12.0.11",
     "lucide-react": "^0.473.0",
     "next": "^15.1.5",
