--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/nextjs": "^6.11.2",
     "@fal-ai/client": "^1.2.3",
     "@fal-ai/serverless-client": "^0.15.0",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google-cloud/text-to-speech": "^5.8.0",
     "@google/generative-ai": "^0.21.0",
     "@neondatabase/serverless": "^0.10.4",
@@ -22,14 +23,12 @@
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
-    "@remotion/bundler": "^4.0.260",
-    "@remotion/cli": "^4.0.260",
-    "@remotion/compositor-win32-x64-msvc": "^4.0.260",
-    "@remotion/lambda": "^4.0.265",
-    "@remotion/player": "^4.0.260",
+    "@remotion/cli": "^4.0.265",
+    "@remotion/compositor-win32-x64-msvc": "^4.0.265",
+    "@remotion/core": "latest",
+    "@remotion/player": "4.0.265",
     "@remotion/renderer": "^4.0.265",
-    "@remotion/streaming": "^4.0.260",
-    "@remotion/studio": "^4.0.260",
+    "@remotion/studio": "^4.0.265",
     "assemblyai": "^4.8.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -37,14 +36,16 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.4",
+    "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^12.0.11",
     "lucide-react": "^0.473.0",
     "next": "^15.1.5",
     "openai": "^4.80.1",
     "react": "^18.3.1",
+    "react-dialog": "^0.1.0",
     "react-dom": "^18.3.1",
-    "remotion": "^4.0.260",
+    "remotion": "4.0.265",
     "replicate": "^1.0.1",
     "say": "^0.16.0",
     "tailwind-merge": "^2.6.0",
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/estree": "^1.0.6",
     "drizzle-kit": "^0.30.2",
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
