--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "db:studio": "drizzle-kit studio",
     "postinstall": "node ./scripts/install.mjs"
   },
+  "optionalDependencies": {
+    "@remotion/compositor-linux-x64-gnu": "*",
+    "@remotion/compositor-win32-x64-msvc": "^4.0.265"
+  },
   "dependencies": {
     "@clerk/nextjs": "^6.11.2",
     "@fal-ai/client": "^1.2.3",
@@ -25,7 +29,6 @@
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@remotion/cli": "^4.0.265",
-    "@remotion/compositor-win32-x64-msvc": "^4.0.265",
     "@remotion/core": "latest",
     "@remotion/player": "4.0.265",
     "@remotion/renderer": "^4.0.265",
@@ -44,7 +47,7 @@
     "next": "^15.1.5",
     "openai": "^4.80.1",
     "react": "^18.3.1",
-    "react-dialog": "^0.1.0",
+    "react-dialog": "^1.0.2",
     "react-dom": "^18.3.1",
     "remotion": "4.0.265",
     "replicate": "^1.0.1",
@@ -56,7 +59,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/estree": "^1.0.6",
-    "drizzle-kit": "^0.30.2",
+    "drizzle-kit": "^0.19.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
     "postcss": "^8",
